# knjba

./: LICENSE  README.md  pyproject.toml  requirements-lock.txt
Tests/: Heating_rate.ipynb  Heating_rate_redback.ipynb
utils/: constants.py  specific_heating_rate.py
